--- a/lib/style/chartExtra.less
+++ b/lib/style/chartExtra.less
@@ -6,7 +6,7 @@
 * @LastEditors: aFei
 * @LastEditTime: 2019-04-30 09:32:29
 */
-.extra {
+.charts-extra {
   width: 90%;
   margin: 0 auto;
   height: 400px;
