初始化数据功能更新

--- a/lib/style/vueChartsBlock.less
+++ b/lib/style/vueChartsBlock.less
@@ -3,9 +3,11 @@
 * @Date: 2019-04-30 09:32:41
 */
 /*
-* @LastEditors: aFei
-* @LastEditTime: 2019-04-30 09:32:43
+ * @LastEditors: afei
+ * @LastEditTime: 2020-12-11 10:19:24
 */
 .vue-charts-block {
-  
+    width: 90%;
+    margin: 0 auto;
+    height: 400px;
 }
