--- a/lib/style/vueChartsBlock.css
+++ b/lib/style/vueChartsBlock.css
@@ -3,7 +3,11 @@
 * @Date: 2019-04-30 09:32:41
 */
 /*
-* @LastEditors: aFei
-* @LastEditTime: 2019-04-30 09:32:43
+ * @LastEditors: afei
+ * @LastEditTime: 2020-12-11 10:19:24
 */
-/*# sourceMappingURL=vueChartsBlock.css.map */
+.vue-charts-block {
+  width: 90%;
+  margin: 0 auto;
+  height: 400px;
+}
