--- a/lib/style/vueEchartsBlock.less
+++ b/lib/style/vueEchartsBlock.less
@@ -3,10 +3,10 @@
 * @Date: 2019-04-30 09:32:41
 */
 /*
- * @LastEditors: afei
- * @LastEditTime: 2020-12-11 10:19:24
+ * @LastEditors: aFei
+ * @LastEditTime: 2022-11-16 16:58:50
 */
-.vue-charts-block {
+.vue-echarts-block {
     width: 90%;
     margin: 0 auto;
     height: 400px;
